tests/field/set_on_int.rev
123.bar = 4 // error: only structure instances have properties